# glame

./: .cvsignore  AUTHORS  BUGS  CREDITS  ChangeLog  INSTALL  MAINTAINERS  Makefile.am  NEWS  README  TODO  acconfig.h  acinclude.m4  aclocal.m4  autogen.sh  config.h.in  configure.ac  configure.in  glame.spec  update-po.sh
data/: Makefile.am
data/pixmaps/: Makefile.am
debian/: README.Debian  cglame.sgml  changelog  control  copyright  glame-convert.sgml  glame.docs  glame.info  glame.manpages  glame.menu  glame.sgml  lintian.overrides  menu  rules  shlibs.local
doc/: .cvsignore  FAQ  Makefile.am  TODO  cglame.texi  coding-style.txt  conversion.texi  development.txt  filter-tutorial.texi  filter-tutorial.txt  filter.fig  filter.texi  filter.txt  glame-dev.texi  glame.texi  gldb.texi  glsignal.texi  gpsm.texi  gui-wishlist.txt  gui.texi  maintainers.txt  masterplan.txt  meisterplan_de.txt  plugin.texi  plugin.txt  plugins.texi  quickstart.texi  swapfile.texi  swapfile.txt  wishlist.txt
doc/pix/: Makefile.am
macros/: Makefile.am  acg-alsa.m4  acg-esd.m4  acg-func-madvise.m4  acg-guile.m4  acg-ladspa.m4  acg-mips-ll-sc.m4  acg-pkg.m4  acg-posix-sem.m4  acg-stuff.m4  acg-sysv-sem.m4  acg-vector.m4  acx-pthread.m4  gnome-gnorba-check.m4  gnome.m4  libxml.m4
po/: Makevars  POTFILES.in  da.po  de.po  fr.po  ignore  it.po
src/: .cvsignore  Makefile.am  cglame.c  glame.c
src/channel/: Makefile.am  channel.c  channel.h  channel_cghash.h
src/data/pixmaps/: Makefile.am
src/filter/: .cvsignore  Makefile.am  audio_io.c  basic.c  basic_midi.c  basic_sample.c  channel_io.c  debug.c  distance.c  drop.c  dup.c  echo.c  echo2.c  esd.c  file_in.c  file_io.c  file_io2.c  file_out.c  filter.c  filter.h  filterI.h  filter_buffer.c  filter_buffer.h  filter_hash.h  filter_methods.c  filter_methods.h  filter_mm.c  filter_mm.h  filter_network.c  filter_node.c  filter_ops.c  filter_ops.h  filter_param.c  filter_param.h  filter_pipe.c  filter_pipe.h  filter_port.c  filter_port.h  filter_protocols.h  filter_tools.h  (+30 more)
src/glmath/: Makefile.am  glmath.h  lina.c  vec.c
src/glmid/: Makefile.am  clipboard.c  clipboard.h  clipboard.scm  glame.scm  glame_audiofile.c  glame_testsuite.scm  glconfig.c  glconfig.h  glfileio.h  glmid.c  glmid.h  glplugin.c  glplugin.h  glscript.c  glscript.h  glscript_filter.c  glscript_gpsm.c  glscript_swapfile.c  gltrack.c  gltrack.h  gpsm.c  gpsm.h  ladspa.c  network_utils.c  network_utils.h  play.scm
src/gui/: .cvsignore  Makefile.am  apply.c  canvas.c  canvas.h  canvas_types.c  default-accels  glame.desktop  glame_accelerator.c  glame_accelerator.h  glame_console.c  glame_console.h  glame_gui_utils.c  glame_gui_utils.h  gltreeitem.c  gltreeitem.h  gtkwavedraw.c  gtkwavedraw.h  gui.c  gui.h  gui_main.c  importexport.c  importexport.h  main.c  main2.cpp  swapfilegui.c  swapfilegui.h  timeline.c  tree.c  tree.h  treetest.c  waveeditgui.c  waveeditgui.h  wavetest.c
src/gui/edit_filter/: Makefile.am  canvas.c  canvas.h  canvas_types.c  canvas_types.h  canvasfilter.c  canvasitem.h  canvaspipe.c  canvasport.c  edit_filter_marshal.list  filtereditgui.c  filtereditgui.h  filtergui.h  glamecanvas.c  glamecanvas.h  gui.c  gui.h  main.c
src/gui/glame_editor/: Makefile.am  glame_editor.c  glame_editor.h  main.c
src/gui/gui/: glame_gui_utils.h
src/gui/libgtkwaveform/: Makefile.am  grange.h  gtkeditablewavebuffer.c  gtkeditablewavebuffer.h  gtkswapfilebuffer.c  gtkswapfilebuffer.h  gtkwave.c  gtkwave.h  gtkwavebuffer.c  gtkwavebuffer.h  gtkwaveform.h  gtkwaveview.c  gtkwaveview.h  gwavefile.c  gwavefile.h  mute.xpm  mute_off.xpm  rec.xpm  rec_off.xpm  sel.xpm  sel_off.xpm  solo.xpm  solo_off.xpm  test.c
src/gui/libgtkwaveform2/: Makefile.am  grange.c  gsimplewavecache.c  gsimplewavecache.h  gtkwaveview.h  gtkwavewidget.h  gwave.c  gwave.h  gwavecache.c  gwavecache.h
src/gui/timeline/: Makefile.am  canvas_types.c  canvas_types.h  timeline.c  timeline.h  timeline_canvas.c  timeline_canvas.h
src/gui/tree/: gltree.c  gltree.cpp  gltree.h  gpsmstore.c  gpsmstore.h
src/gui/util/: Makefile.am  glame_curve.c  glame_curve.h  glame_dnd.h  glame_gui_utils.c  glame_gui_utils.h  glame_hruler.c  glame_hruler.h  glame_param.c  glame_param.h  glame_ruler.c  glame_ruler.h  gtknob.c  gtknob.h  gtknob.xpm
src/hash/: Makefile.am  glame_hash.c  glame_hash.h  gldb.c  gldb.h  gldb_string.c  gldb_string.h  gldb_worm.c  gldb_worm.h  glsignal.c  glsignal.h  glsimd.c  glsimd.h
src/include/: Makefile.am  atomic.h  atomic_alpha.h  atomic_mips.h  atomic_ppc.h  atomic_x86.h  glame_audiofile.h  glame_byteorder.h  glame_guile_compat.h  glame_sem.h  glame_swab.h  glame_types.h  hash.h  ladspa.h  list.h  midi.h  sem.h  simd.h  simd_c.h  simd_x86_3dnow.h  simd_x86_isse1.h  util.h
src/libfixp/: Makefile.am  fixp.c  fixp.h  fp-bench.c  fp-test.c
src/plugin/: Makefile.am  plugin.c  plugin.h
src/plugins/: Makefile.am  arithmetic.c  audio_io.c  audio_io.h  audio_io_alsa.c  audio_io_alsa_v050.c  audio_io_alsa_v090.c  audio_io_esd.c  audio_io_irix.c  audio_io_jack.c  audio_io_oss.c  basic.c  basic_midi.c  basic_sample.c  bassboost.scm  builtins.c  debug.c  distortion.c  echo.c  echo2.scm  fader.c  fft.c  fft_bandpass.scm  fft_plugins.c  file_io.c  file_mp3_out.c  file_oggvorbis_out.c  flanger.c  garrison.c  iir.c  importexport.c  ladspa.c  maggy.c  midi_debug.c  midi_io.c  midi_io_alsa.c  mixer.c  net_test_echo  net_test_echo2  net_test_play  (+21 more)
src/rw/: Makefile.am  rw.c  rw.h  wav_file.c  wav_file.h
src/swapfile/: .cvsignore  Makefile.am  glame-convert.sh  gmkswap.c  pmap.c  pmap.h  swapfile.c  swapfile.h  swapfileI.h  swapfile_fs.c  swapfile_fsck.c  swapfile_hash.h  swapfile_info.c  swapfile_mkswap.c  swapfile_test.c  swfs_cluster.c  swfs_cluster.h  swfs_ctree.c  swfs_ctree.h  swfs_file.c  swfs_file.h  txn.c  txn.h
